# AiSQL

./: .gitignore  AgentBase.py  AgentChart.py  AgentData.py  AgentDataThread.py  AgentDataWorker.py  AgentWorker.py  AiSQL.spec  ChatExecutor.py  ColumnFilterDialog.py  ExcelExporter.py  ExcelLoader.py  LoadEnv.py  ModelGemini.py  ModelHorizon.py  PandasModel.py  PandasTableModel.py  QueryExecutor.py  README.md  SQLFormatter.py  Version.py  db_setting_dlg.py  example.txt  main.py  main.spec  main_minimal.py  main_ui.py  pyproject.toml  sandbox.py  sandbox.txt  sys_prompt.txt  sys_prompt2.txt  test.py  test_agent.py  test_main.py  test_mcp.py  tokenn.py
scaffolding/: Cls.py  Cls_ui.py
sql/: query.sql  ดึงข้อมูลจำนวนประชากรแยกรายหมู่บ้าน.sql
