[project]
name = "aisql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=4.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic-ai>=0.4.11",
    "pydantic-ai-slim[mcp]>=0.4.11",
    "pymysql>=1.1.1",
    "pyqt6>=6.9.1",
    "sqlalchemy>=2.0.42",
    "sqlparse>=0.5.3",
]
